# WBAI059-05

./: .gitignore  .pre-commit-config.yaml  README.md  example.config.yaml  main.py  pyproject.toml
archive/: ablation_study_results.csv
archive/assignment_3/: nlp-finetuning_27929536.err  nlp-finetuning_27929536.out
notebooks/: assignment2.ipynb
reports/assignment2/: main.tex  references.bib
src/: const.py
src/data/: agnews.py  agnews2trans.py  agnews2vec.py  data.py  download.py  transformed_dataset.py
src/models/: cnn.py  distilbert.py  lstm.py
src/showcase/: assignment1.py  assignment2.py  assignment3.py
src/training/: analyze_errors.py  eval.py  gridsearch.py  train.py  trainer.py
src/utils/: data.py  error_analysis_pipeline.py  logging.py  output.py  robustness.py  singleton.py  ui.py
